lang/tests/contract/common/ui/fail/07-missing-storage-struct.rs
use liquid_lang as liquid;

#[liquid::contract]
mod noop {}

fn main() {}
