lang/tests/contract/common/ui/fail/07-missing-storage-struct.stderr
error: no `#[liquid(storage)]` struct found in this contract
 --> $DIR/07-missing-storage-struct.rs:4:1
  |
4 | mod noop {}
  | ^^^^^^^^^^^
